--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ server.port=8443
 
 # postgres db connection
 # todo: use environment system variables
-spring.datasource.url=jdbc:postgresql://localhost:5432/arena-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/arena_db
 spring.datasource.password=postgres
 spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -35,3 +35,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # hibernate and jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
