--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,14 +21,14 @@
 # SOFTWARE.
 
 
-server.port=8443
+server.port=${SERVER_PORT}
 
 
 # postgres db connection
 # todo: use environment system variables
-spring.datasource.url=jdbc:postgresql://localhost:5432/arena_db
-spring.datasource.password=postgres
-spring.datasource.username=postgres
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
@@ -36,3 +36,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.servlet.context-path=/api/v1.0
+jwt.secret.key=${JWT_SECRET_KEY}
