--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2025 Kenya Java UserEntity Group
+# Copyright (c) 2025 Kenya Java User Group
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -23,20 +23,16 @@
 
 server.port=${SERVER_PORT}
 
-
-# postgres db connection
-# todo: use environment system variables
+#example url jdbc:sqlite:arena.db
 spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.sqlite.JDBC
 
 
 # hibernate and jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
 server.servlet.context-path=/api/v1.0
 jwt.secret.key=${JWT_SECRET_KEY}
