--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2025 Kenya Java UserEntity Group
+# Copyright (c) 2025 Kenya Java User Group
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -39,3 +39,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # Enable H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.org.springframework=DEBUG
