--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2025 Kenya Java UserEntity Group
+# Copyright (c) 2025 Kenya Java User Group
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -23,7 +23,7 @@
 
 spring.application.name=arena
 
-spring.profiles.active=dev
+spring.profiles.active=test
 
 
 # Expose all actuator endpoints
